@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-16T08:10:47Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_prev_day_inc" : 2,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-17T00:38:56Z",
+  "count" : 5,
+  "count_minmax" : [ 2, 5 ],
+  "count_decinc" : [ -0, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
