@@ -1,3 +1,10 @@
+2022-05-17T00:38:56Z:
+* notice: last 14d: all unq: 419 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 1115 69 / 1531 83
+* notice: next accum: outdated-all outdated-unq / all unq: 1115 69 / 1534 83
+* notice: prev exec diff / last date diff: unq all: +0 +3 -0 -0 / +0 +3 -0 -0
+* notice: changed dates: [2022-05-16]
+
 2022-05-16T08:10:47Z:
 * notice: last 14d: all unq: 416 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 1115 69 / 1529 82
